docs: Add native access requirement to FFM provider warning
Update FFM provider warning to clarify that both Java 22+ and
native access permissions (--enable-native-access) are required.

Addresses review feedback in PR #1600.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>